force-app/main/default/objects/IssueHearing__c/IssueHearing__c.object-meta.xml
<CustomObject>
    <label>課題ヒアリング</label>
    <nameField>
        <displayFormat>Issue-{0000}</displayFormat>
        <label>課題ヒアリング番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>