force-app/main/default/objects/IssueHearing__c/fields/addition__c.field-meta.xml
<CustomField>
    <fullName>addition__c</fullName>
    <label>積算</label>
    <length>255</length>
    <type>Text</type>
</CustomField>