force-app/main/default/objects/IssueHearing__c/fields/additionD__c.field-meta.xml
<CustomField>
    <fullName>additionD__c</fullName>
    <label>積算部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>