force-app/main/default/objects/IssueHearing__c/fields/additionNm__c.field-meta.xml
<CustomField>
    <fullName>additionNm__c</fullName>
    <label>積算部門_人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>