force-app/main/default/objects/IssueHearing__c/fields/additionNmO__c.field-meta.xml
<CustomField>
    <fullName>additionNmO__c</fullName>
    <label>積算部門_外注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>