force-app/main/default/objects/IssueHearing__c/fields/additionR__c.field-meta.xml
<CustomField>
    <fullName>additionR__c</fullName>
    <label>積算部門_取組んだ結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>