force-app/main/default/objects/IssueHearing__c/fields/afterD__c.field-meta.xml
<CustomField>
    <fullName>afterD__c</fullName>
    <label>アフター部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>