force-app/main/default/objects/IssueHearing__c/fields/afterNm__c.field-meta.xml
<CustomField>
    <fullName>afterNm__c</fullName>
    <label>アフター部門_人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>