force-app/main/default/objects/IssueHearing__c/fields/afterNmO__c.field-meta.xml
<CustomField>
    <fullName>afterNmO__c</fullName>
    <label>アフター部門_外注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>