force-app/main/default/objects/IssueHearing__c/fields/afterR__c.field-meta.xml
<CustomField>
    <fullName>afterR__c</fullName>
    <label>アフター部門_取組んだ結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>