force-app/main/default/objects/IssueHearing__c/fields/BuildingHouseHearingDay__c.field-meta.xml
<CustomField>
    <fullName>BuildingHouseHearingDay__c</fullName>
    <label>家づくりの期間ヒアリング日</label>
    <type>Date</type>
</CustomField>