force-app/main/default/objects/IssueHearing__c/fields/businessD__c.field-meta.xml
<CustomField>
    <fullName>businessD__c</fullName>
    <label>購買部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>