force-app/main/default/objects/IssueHearing__c/fields/businessNm__c.field-meta.xml
<CustomField>
    <fullName>businessNm__c</fullName>
    <label>業務_人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>