force-app/main/default/objects/IssueHearing__c/fields/businessNmO__c.field-meta.xml
<CustomField>
    <fullName>businessNmO__c</fullName>
    <label>業務_外注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>