force-app/main/default/objects/IssueHearing__c/fields/businessR__c.field-meta.xml
<CustomField>
    <fullName>businessR__c</fullName>
    <label>購買部門_取組んだ結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>