force-app/main/default/objects/IssueHearing__c/fields/carpenter__c.field-meta.xml
<CustomField>
    <fullName>carpenter__c</fullName>
    <label>大工部門_外注有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Umu</valueSetName>
    </valueSet>
</CustomField>