force-app/main/default/objects/IssueHearing__c/fields/carpenterD__c.field-meta.xml
<CustomField>
    <fullName>carpenterD__c</fullName>
    <label>大工部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>