force-app/main/default/objects/IssueHearing__c/fields/carpenterNm__c.field-meta.xml
<CustomField>
    <fullName>carpenterNm__c</fullName>
    <label>大工部門_人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>