force-app/main/default/objects/IssueHearing__c/fields/carpenterNmO__c.field-meta.xml
<CustomField>
    <fullName>carpenterNmO__c</fullName>
    <label>大工部門_外注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>