force-app/main/default/objects/IssueHearing__c/fields/carpenterR__c.field-meta.xml
<CustomField>
    <fullName>carpenterR__c</fullName>
    <label>大工部門_取組んだ結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>