force-app/main/default/objects/IssueHearing__c/fields/ClientProposalPlanning__c.field-meta.xml
<CustomField>
    <fullName>ClientProposalPlanning__c</fullName>
    <label>施主提案・プランニング</label>
    <length>255</length>
    <type>Text</type>
</CustomField>