force-app/main/default/objects/IssueHearing__c/fields/construction__c.field-meta.xml
<CustomField>
    <fullName>construction__c</fullName>
    <label>工事部門_外注有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Umu</valueSetName>
    </valueSet>
</CustomField>