force-app/main/default/objects/IssueHearing__c/fields/constructionD__c.field-meta.xml
<CustomField>
    <fullName>constructionD__c</fullName>
    <label>工事部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>