force-app/main/default/objects/IssueHearing__c/fields/ConstructionDivision__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDivision__c</fullName>
    <label>工事部門</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コストダウン</fullName>
            </value>
            <value>
                <fullName>安全確保</fullName>
            </value>
            <value>
                <fullName>管理体制強化</fullName>
            </value>
            <value>
                <fullName>工期短縮</fullName>
            </value>
            <value>
                <fullName>施工体制強化</fullName>
            </value>
            <value>
                <fullName>施工力確保</fullName>
            </value>
            <value>
                <fullName>女性監督採用</fullName>
            </value>
            <value>
                <fullName>省施工</fullName>
            </value>
            <value>
                <fullName>人材育成</fullName>
            </value>
            <value>
                <fullName>人手不足</fullName>
            </value>
            <value>
                <fullName>廃棄物削減</fullName>
            </value>
            <value>
                <fullName>品質管理</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>