force-app/main/default/objects/IssueHearing__c/fields/constructionNm__c.field-meta.xml
<CustomField>
    <fullName>constructionNm__c</fullName>
    <label>工事部門_人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>