force-app/main/default/objects/IssueHearing__c/fields/constructionNmO__c.field-meta.xml
<CustomField>
    <fullName>constructionNmO__c</fullName>
    <label>工事部門_外注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>