force-app/main/default/objects/IssueHearing__c/fields/constructionR__c.field-meta.xml
<CustomField>
    <fullName>constructionR__c</fullName>
    <label>工事部門_取組んだ結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>