force-app/main/default/objects/IssueHearing__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <label>基幹システム</label>
    <length>255</length>
    <type>Text</type>
</CustomField>