force-app/main/default/objects/IssueHearing__c/fields/designD__c.field-meta.xml
<CustomField>
    <fullName>designD__c</fullName>
    <label>設計部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>