force-app/main/default/objects/IssueHearing__c/fields/designNm__c.field-meta.xml
<CustomField>
    <fullName>designNm__c</fullName>
    <label>設計部門_人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>