force-app/main/default/objects/IssueHearing__c/fields/designNmO__c.field-meta.xml
<CustomField>
    <fullName>designNmO__c</fullName>
    <label>設計部門_外注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>