force-app/main/default/objects/IssueHearing__c/fields/designR__c.field-meta.xml
<CustomField>
    <fullName>designR__c</fullName>
    <label>設計部門_取組んだ結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>