force-app/main/default/objects/IssueHearing__c/fields/DrawingWork__c.field-meta.xml
<CustomField>
    <fullName>DrawingWork__c</fullName>
    <label>作図業務</label>
    <length>255</length>
    <type>Text</type>
</CustomField>