force-app/main/default/objects/IssueHearing__c/fields/EnergyWork__c.field-meta.xml
<CustomField>
    <fullName>EnergyWork__c</fullName>
    <label>省エネ計算業務</label>
    <length>255</length>
    <type>Text</type>
</CustomField>