force-app/main/default/objects/IssueHearing__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <label>実行予算作成</label>
    <length>255</length>
    <type>Text</type>
</CustomField>