force-app/main/default/objects/IssueHearing__c/fields/FieldM__c.field-meta.xml
<CustomField>
    <fullName>FieldM__c</fullName>
    <label>現場管理システム</label>
    <length>255</length>
    <type>Text</type>
</CustomField>