force-app/main/default/objects/IssueHearing__c/fields/grossProfit1__c.field-meta.xml
<CustomField>
    <fullName>grossProfit1__c</fullName>
    <label>前々期_売上総利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>