force-app/main/default/objects/IssueHearing__c/fields/grossProfit2__c.field-meta.xml
<CustomField>
    <fullName>grossProfit2__c</fullName>
    <label>前期_売上総利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>