force-app/main/default/objects/IssueHearing__c/fields/grossProfit3__c.field-meta.xml
<CustomField>
    <fullName>grossProfit3__c</fullName>
    <label>今期（計画）_売上総利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>