force-app/main/default/objects/IssueHearing__c/fields/HearingDate__c.field-meta.xml
<CustomField>
    <fullName>HearingDate__c</fullName>
    <label>ヒアリング日</label>
    <type>Date</type>
</CustomField>