force-app/main/default/objects/IssueHearing__c/fields/HEAT__c.field-meta.xml
<CustomField>
    <fullName>HEAT__c</fullName>
    <label>HEAT20 G2水準の仕様</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Umu</valueSetName>
    </valueSet>
</CustomField>