force-app/main/default/objects/IssueHearing__c/fields/HEATTEXT__c.field-meta.xml
<CustomField>
    <fullName>HEATTEXT__c</fullName>
    <label>HEAT20 G2水準の仕様</label>
    <length>255</length>
    <type>Text</type>
</CustomField>