force-app/main/default/objects/IssueHearing__c/fields/insulation4__c.field-meta.xml
<CustomField>
    <fullName>insulation4__c</fullName>
    <label>断熱等性能等級4以上の仕様</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Umu</valueSetName>
    </valueSet>
</CustomField>