force-app/main/default/objects/IssueHearing__c/fields/insulation4TEXT__c.field-meta.xml
<CustomField>
    <fullName>insulation4TEXT__c</fullName>
    <label>断熱等性能等級4以上の仕様</label>
    <length>255</length>
    <type>Text</type>
</CustomField>