force-app/main/default/objects/IssueHearing__c/fields/LongTerm__c.field-meta.xml
<CustomField>
    <fullName>LongTerm__c</fullName>
    <label>長期優良住宅（断熱等級5/一次エネ等級6）の仕様</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Umu</valueSetName>
    </valueSet>
</CustomField>