force-app/main/default/objects/IssueHearing__c/fields/LongTermTEXT__c.field-meta.xml
<CustomField>
    <fullName>LongTermTEXT__c</fullName>
    <label>長期優良住宅（断熱等級5/一次エネ等級6）の仕様</label>
    <length>255</length>
    <type>Text</type>
</CustomField>