force-app/main/default/objects/IssueHearing__c/fields/OperatingProfit2__c.field-meta.xml
<CustomField>
    <fullName>OperatingProfit2__c</fullName>
    <label>前期_営業利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>