force-app/main/default/objects/IssueHearing__c/fields/OperatingProfit4__c.field-meta.xml
<CustomField>
    <fullName>OperatingProfit4__c</fullName>
    <label>来期（計画）_営業利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>