force-app/main/default/objects/IssueHearing__c/fields/order2__c.field-meta.xml
<CustomField>
    <fullName>order2__c</fullName>
    <label>前期_注文</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>