force-app/main/default/objects/IssueHearing__c/fields/order3__c.field-meta.xml
<CustomField>
    <fullName>order3__c</fullName>
    <label>今期（計画）_注文</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>