force-app/main/default/objects/IssueHearing__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <label>受発注</label>
    <length>255</length>
    <type>Text</type>
</CustomField>