force-app/main/default/objects/IssueHearing__c/fields/OrdinaryProfit1__c.field-meta.xml
<CustomField>
    <fullName>OrdinaryProfit1__c</fullName>
    <label>前々期_経常利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>