force-app/main/default/objects/IssueHearing__c/fields/OrdinaryProfit3__c.field-meta.xml
<CustomField>
    <fullName>OrdinaryProfit3__c</fullName>
    <label>今期（計画）_経常利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>