force-app/main/default/objects/IssueHearing__c/fields/period01__c.field-meta.xml
<CustomField>
    <fullName>period01__c</fullName>
    <label>設計契約～プラン確定</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>