force-app/main/default/objects/IssueHearing__c/fields/period02__c.field-meta.xml
<CustomField>
    <fullName>period02__c</fullName>
    <label>プラン確定～確認申請済書入手</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>