force-app/main/default/objects/IssueHearing__c/fields/period03__c.field-meta.xml
<CustomField>
    <fullName>period03__c</fullName>
    <label>プラン確定～設計→工事引継ぎ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>