force-app/main/default/objects/IssueHearing__c/fields/PrimaryEnergy4__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEnergy4__c</fullName>
    <label>一次エネ等級4以上の仕様</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Umu</valueSetName>
    </valueSet>
</CustomField>