force-app/main/default/objects/IssueHearing__c/fields/PurchasingDepartment__c.field-meta.xml
<CustomField>
    <fullName>PurchasingDepartment__c</fullName>
    <label>購買部門</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コストダウン</fullName>
            </value>
            <value>
                <fullName>効率化</fullName>
            </value>
            <value>
                <fullName>商流集約</fullName>
            </value>
            <value>
                <fullName>省施工</fullName>
            </value>
            <value>
                <fullName>粗利確保</fullName>
            </value>
            <value>
                <fullName>廃棄物削減</fullName>
            </value>
            <value>
                <fullName>品質向上</fullName>
            </value>
            <value>
                <fullName>付加価値追求</fullName>
            </value>
            <value>
                <fullName>物流効率化</fullName>
            </value>
            <value>
                <fullName>安定供給</fullName>
            </value>
            <value>
                <fullName>意匠性向上</fullName>
            </value>
            <value>
                <fullName>購買がなく工事が兼務</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>