force-app/main/default/objects/IssueHearing__c/fields/rental1__c.field-meta.xml
<CustomField>
    <fullName>rental1__c</fullName>
    <label>前々期_賃貸</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>