force-app/main/default/objects/IssueHearing__c/fields/rental2__c.field-meta.xml
<CustomField>
    <fullName>rental2__c</fullName>
    <label>前期_賃貸</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>