force-app/main/default/objects/IssueHearing__c/fields/rental3__c.field-meta.xml
<CustomField>
    <fullName>rental3__c</fullName>
    <label>今期（計画）_賃貸</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>