force-app/main/default/objects/IssueHearing__c/fields/SaleLots1__c.field-meta.xml
<CustomField>
    <fullName>SaleLots1__c</fullName>
    <label>前々期_分譲</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>