force-app/main/default/objects/IssueHearing__c/fields/SaleLots2__c.field-meta.xml
<CustomField>
    <fullName>SaleLots2__c</fullName>
    <label>前期_分譲</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>