force-app/main/default/objects/IssueHearing__c/fields/SaleLots4__c.field-meta.xml
<CustomField>
    <fullName>SaleLots4__c</fullName>
    <label>来期（計画）_分譲</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>