force-app/main/default/objects/IssueHearing__c/fields/Sales1__c.field-meta.xml
<CustomField>
    <fullName>Sales1__c</fullName>
    <label>前々期_売上高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>