force-app/main/default/objects/IssueHearing__c/fields/Sales2__c.field-meta.xml
<CustomField>
    <fullName>Sales2__c</fullName>
    <label>前期_売上高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>