force-app/main/default/objects/IssueHearing__c/fields/Sales3__c.field-meta.xml
<CustomField>
    <fullName>Sales3__c</fullName>
    <label>今期（計画）_売上高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>