force-app/main/default/objects/IssueHearing__c/fields/salesD__c.field-meta.xml
<CustomField>
    <fullName>salesD__c</fullName>
    <label>営業部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>