force-app/main/default/objects/IssueHearing__c/fields/SalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartment__c</fullName>
    <label>営業部門</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP拡大</fullName>
            </value>
            <value>
                <fullName>エコ</fullName>
            </value>
            <value>
                <fullName>エリア拡大</fullName>
            </value>
            <value>
                <fullName>営業強化</fullName>
            </value>
            <value>
                <fullName>価格競争力</fullName>
            </value>
            <value>
                <fullName>差別化</fullName>
            </value>
            <value>
                <fullName>集客</fullName>
            </value>
            <value>
                <fullName>新規事業</fullName>
            </value>
            <value>
                <fullName>人員強化</fullName>
            </value>
            <value>
                <fullName>土地仕入</fullName>
            </value>
            <value>
                <fullName>棟数確保</fullName>
            </value>
            <value>
                <fullName>棟単価UP</fullName>
            </value>
            <value>
                <fullName>利益重視</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>