force-app/main/default/objects/IssueHearing__c/fields/salesNm__c.field-meta.xml
<CustomField>
    <fullName>salesNm__c</fullName>
    <label>営業部門_人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>