force-app/main/default/objects/IssueHearing__c/fields/salesNmO__c.field-meta.xml
<CustomField>
    <fullName>salesNmO__c</fullName>
    <label>営業部門_外注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>