force-app/main/default/objects/IssueHearing__c/fields/salesR__c.field-meta.xml
<CustomField>
    <fullName>salesR__c</fullName>
    <label>営業部門_取組んだ結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>