force-app/main/default/objects/IssueHearing__c/fields/SDG__c.field-meta.xml
<CustomField>
    <fullName>SDG__c</fullName>
    <label>SDG’ｓへの取組</label>
    <length>255</length>
    <type>Text</type>
</CustomField>