force-app/main/default/objects/IssueHearing__c/fields/SDGHearingDay__c.field-meta.xml
<CustomField>
    <fullName>SDGHearingDay__c</fullName>
    <label>SDGｓの取り組みテーマヒアリング日</label>
    <type>Date</type>
</CustomField>