force-app/main/default/objects/IssueHearing__c/fields/SDGsDepartment__c.field-meta.xml
<CustomField>
    <fullName>SDGsDepartment__c</fullName>
    <label>SDGs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
            </value>
            <value>
                <fullName>商品開発</fullName>
            </value>
            <value>
                <fullName>地域貢献</fullName>
            </value>
            <value>
                <fullName>建物長寿命化</fullName>
            </value>
            <value>
                <fullName>環境貢献</fullName>
            </value>
            <value>
                <fullName>高断熱化</fullName>
            </value>
            <value>
                <fullName>集約配送</fullName>
            </value>
            <value>
                <fullName>廃棄物削減</fullName>
            </value>
            <value>
                <fullName>循環型資材導入検討</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>