force-app/main/default/objects/IssueHearing__c/fields/StartMonth__c.field-meta.xml
<CustomField>
    <fullName>StartMonth__c</fullName>
    <formula>IF (  Account__r.ClosingMonth__c &gt; 0 ,  MOD(Account__r.ClosingMonth__c + 1,12)  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>開始月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>