force-app/main/default/objects/IssueHearing__c/fields/StructuralWork__c.field-meta.xml
<CustomField>
    <fullName>StructuralWork__c</fullName>
    <label>構造検討業務</label>
    <length>255</length>
    <type>Text</type>
</CustomField>