force-app/main/default/objects/IssueHearing__c/fields/ThemeHearingDay__c.field-meta.xml
<CustomField>
    <fullName>ThemeHearingDay__c</fullName>
    <label>今期取り組みテーマヒアリング日</label>
    <type>Date</type>
</CustomField>