force-app/main/default/objects/IssueHearing__c/fields/wasteMaterial1__c.field-meta.xml
<CustomField>
    <fullName>wasteMaterial1__c</fullName>
    <label>廃材量の多い商材上位1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>