force-app/main/default/objects/IssueHearing__c/fields/wasteMaterial2__c.field-meta.xml
<CustomField>
    <fullName>wasteMaterial2__c</fullName>
    <label>廃材量の多い商材上位2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>