force-app/main/default/objects/IssueHearing__c/fields/wasteMaterial3__c.field-meta.xml
<CustomField>
    <fullName>wasteMaterial3__c</fullName>
    <label>廃材量の多い商材上位3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>