force-app/main/default/objects/IssueHearing__c/fields/wasteMaterialCarrier__c.field-meta.xml
<CustomField>
    <fullName>wasteMaterialCarrier__c</fullName>
    <label>収集運搬業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>