force-app/main/default/objects/IssueHearing__c/fields/wasteMaterialYen__c.field-meta.xml
<CustomField>
    <fullName>wasteMaterialYen__c</fullName>
    <label>廃材金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>